--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,21 +1,20 @@
 <%- include("header") -%>
-    <div class="box" id="heading">
-      <h1><%= listTitle %></h1>
+<div class="box" id="heading">
+  <h1><%= listTitle %></h1>
+</div>
+<div class="box">
+  <% newListItems.forEach(function(item){ %>
+  <form action="/delete" method="post">
+    <div class="item">
+      <input type="checkbox" name="checkbox" value="<%=item._id%>" onchange="this.form.submit()" />
+      <p><%= item.name %></p>
     </div>
-    <div class="box">
-      <% for( let index = 0; index < newListItems.length; index++ ) { %>
-      <div class="item">
-        <input type="checkbox" />
-        <p><%= newListItems[index] %></p>
-      </div>
-      <% } %>
-      <form class="item" action="/" method="post">
-        <input
-          type="text"
-          name="newItem"
-          placeholder="New Item"
-          autocomplete="off" />
-        <button type="submit" name="list" value=<%= listTitle %>>+</button>
-      </form>
-    </div>
-    <%- include("footer") -%>
+    <input type="hidden" name="list" value="<%= listTitle %>" />
+  </form>
+    <%  }) %>
+  <form class="item" action="/" method="post">
+    <input type="text" name="newItem" placeholder="New Item" autocomplete="off" />
+    <button type="submit" name="list" value=<%= listTitle %>>+</button>
+  </form>
+</div>
+<%- include("footer") -%>
